--- a/springboot-dubbo-service/src/main/resources/application.yml
+++ b/springboot-dubbo-service/src/main/resources/application.yml
@@ -34,13 +34,13 @@ dubbo:
   registry:
     protocol: zookeeper
     address: zookeeper://49.235.126.19:2181
-    timeout: 60000
+    timeout: 600000
   protocol:
     name: dubbo
     port: 20880
   consumer:
     retries: 0
-    timeout: 60000
+    timeout: 600000
 
   #扫描包的位置
   scan:
@@ -64,3 +64,6 @@ mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:mapper/*xml
+
+logging:
+  config: classpath:logback.xml
