--- a/springboot-dubbo-web/src/main/resources/application.yml
+++ b/springboot-dubbo-web/src/main/resources/application.yml
@@ -22,6 +22,7 @@ spring:
         max-wait: -1
         max-idle: 500
         min-idle: 0
+    password: wxr19980304
   #静态资源访问
   resources:
       static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/templates/,file:${User.data}
