给查询关注、查询粉丝、查询实例添加了分页功能

--- a/springboot-dubbo-service/src/main/resources/application.yml
+++ b/springboot-dubbo-service/src/main/resources/application.yml
@@ -59,6 +59,14 @@ jasypt:
     algorithm: PBEWithMD5AndDES
     iv-generator-classname: org.jasypt.iv.NoIvGenerator
 
+#分页插件
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
+
+
 #配置日志
 mybatis-plus:
   configuration:
