--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,12 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.0.5</version>
         </dependency>
-
+        <!-- 分页插件 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
+        </dependency>
         <!-- 数据库密码加密-->
         <dependency>
             <groupId>com.github.ulisesbocchio</groupId>
