--- a/springboot-dubbo-service/pom.xml
+++ b/springboot-dubbo-service/pom.xml
@@ -85,6 +85,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+        <!--&lt;!&ndash; 分页插件 &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--    <groupId>com.github.pagehelper</groupId>-->
+        <!--    <artifactId>pagehelper-spring-boot-starter</artifactId>-->
+        <!--    <version>1.3.0</version>-->
+        <!--</dependency>-->
         <!--druid连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
