整合rabbitmq 使用延迟队列做回收站功能 添加喜爱作品数、个人作品数字段 通过添加该字段的逻辑处理

--- a/springboot-dubbo-service/src/main/resources/application.yml
+++ b/springboot-dubbo-service/src/main/resources/application.yml
@@ -21,11 +21,18 @@ spring:
     testOnBorrow: false
     testOnReturn: false
     poolPreparedStatements: true
-
+  #邮箱配置
   mail:
     host: smtp.qq.com
     username: 1275096074@qq.com
     password: nbybixepsvogjgdi
+  #rabbitmq配置
+  rabbitmq:
+    host: 49.235.126.19
+    port: 5672
+    username: user
+    password: wxr19980304
+
 
 #dubbo配置
 dubbo:
