自定义Security登录逻辑 合并 创建实例和保存实例内容接口 修改第三方登陆逻辑 使用uuid创建实例id

--- a/springboot-dubbo-web/src/main/resources/application-dev.yml
+++ b/springboot-dubbo-web/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ qiniuyun:
   accessKey: Z_7eMJdtj_n4lrAdSs3zVuZ8rn4wZXu75b1gYJbC
   secretKey: QIriVPlgNKoKdjU02q166-7IBPy3z9sQTMn5Ae7R
   bucket: js-encoder
-
+  url: 
 chorme:
   value: /usr/bin/chromedriver
 
