修改用户登录逻辑 合并第三方登录逻辑代码块

--- a/springboot-dubbo-service/pom.xml
+++ b/springboot-dubbo-service/pom.xml
@@ -183,7 +183,7 @@
 
     <build>
         <!-- 包名称 -->
-        <finalName>dubbo-service</finalName>
+        <finalName>onlineidea-service</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
