--- a/springboot-dubbo-web/pom.xml
+++ b/springboot-dubbo-web/pom.xml
@@ -158,6 +158,12 @@
             <artifactId>jasypt-spring-boot</artifactId>
             <version>3.0.2</version>
         </dependency>
+        <!--druid连接池-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.2.4</version>
+        </dependency>
         <!--lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -176,13 +182,20 @@
             <artifactId>qiniu-java-sdk</artifactId>
             <version>7.7.0</version>
         </dependency>
-
+        <!--用于转webp-->
+        <dependency>
+            <groupId>com.github.nintha</groupId>
+            <artifactId>webp-imageio-core</artifactId>
+            <version>0.1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/webp-imageio-core-0.1.0.jar</systemPath>
+        </dependency>
     </dependencies>
 
 
     <build>
         <!-- 包名称 -->
-        <finalName>dubbo-web</finalName>
+        <finalName>onlineidea-web</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
