登录状态下进行第三方绑定

--- a/springboot-dubbo-web/pom.xml
+++ b/springboot-dubbo-web/pom.xml
@@ -86,7 +86,7 @@
             <artifactId>selenium-java</artifactId>
             <version>3.9.1</version>
         </dependency>
-        <!--版本冲突必须和seleniumhq同时导入-->
+        <!--版本冲突时必须和seleniumhq同时导入-->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
