修改web服务器无法引用本地jar包问题 添加webp图片压缩

--- a/springboot-dubbo-web/pom.xml
+++ b/springboot-dubbo-web/pom.xml
@@ -203,6 +203,8 @@
                 <!--添加自己的启动类路径！-->
                 <configuration>
                     <mainClass>com.lzq.web.WebApplication</mainClass>
+                    <!--应用本地jar包-->
+                    <includeSystemScope>true</includeSystemScope>
                 </configuration>
                 <executions>
                     <execution>
