--- a/springboot-dubbo-web/src/main/resources/application-test.yml
+++ b/springboot-dubbo-web/src/main/resources/application-test.yml
@@ -6,7 +6,6 @@ qiniuyun:
   accessKey: fIf9nYz-wQo3HD1AlhQ5wrUrdjtygUPGe2dpuLlY
   secretKey: ItVUX8sAaxsuj7kgmk3IZ0ip3BHljAx61N8m922C
   bucket: lzqwxr
-  url: firstbird.asia/
 
 chorme:
   value: F:/ChormeDriver/chromedriver.exe
@@ -41,7 +40,7 @@ spring:
     password: wxr19980304
   #静态资源访问
   resources:
-      static-locations: file:${User.data}
+      static-locations: file:${resources.route}
 dubbo:
   application:
     name: dubbo_web
