--- a/springboot-dubbo-web/src/main/resources/application-dev.yml
+++ b/springboot-dubbo-web/src/main/resources/application-dev.yml
@@ -6,7 +6,6 @@ qiniuyun:
   accessKey: Z_7eMJdtj_n4lrAdSs3zVuZ8rn4wZXu75b1gYJbC
   secretKey: QIriVPlgNKoKdjU02q166-7IBPy3z9sQTMn5Ae7R
   bucket: js-encoder
-  url: 
 chorme:
   value: /usr/bin/chromedriver
 
@@ -52,7 +51,7 @@ spring:
     password: wxr19980304
   #静态资源访问
   resources:
-      static-locations: file:${User.data}
+      static-locations: file:${resources.route}
 dubbo:
   application:
     name: dubbo_web
