--- a/springboot-dubbo-web/pom.xml
+++ b/springboot-dubbo-web/pom.xml
@@ -44,7 +44,7 @@
             <version>2.7.3</version>
         </dependency>
 
-        <!--curator-->
+        <!--zookeeper curator-->
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
-            <version>2.8.0</version>
+            <version>4.0.1</version>
         </dependency>
         <!--zookeeper -->
         <dependency>
@@ -140,18 +140,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-        <!--mybaits-plus-->
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.0.5</version>
-        </dependency>
-        <!-- 分页插件 -->
-        <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper-spring-boot-starter</artifactId>
-            <version>1.3.0</version>
-        </dependency>
+        <!--&lt;!&ndash;mybaits-plus&ndash;&gt;-->
+        <!--<dependency>-->
+        <!--    <groupId>com.baomidou</groupId>-->
+        <!--    <artifactId>mybatis-plus-boot-starter</artifactId>-->
+        <!--    <version>3.0.5</version>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; 分页插件 &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--    <groupId>com.github.pagehelper</groupId>-->
+        <!--    <artifactId>pagehelper-spring-boot-starter</artifactId>-->
+        <!--    <version>1.3.0</version>-->
+        <!--</dependency>-->
         <!-- 数据库密码加密-->
         <dependency>
             <groupId>com.github.ulisesbocchio</groupId>
