--- a/springboot-dubbo-service/src/main/resources/application-dev.yml
+++ b/springboot-dubbo-service/src/main/resources/application-dev.yml
@@ -6,3 +6,24 @@ qiniuyun:
   accessKey: fIf9nYz-wQo3HD1AlhQ5wrUrdjtygUPGe2dpuLlY
   secretKey: ItVUX8sAaxsuj7kgmk3IZ0ip3BHljAx61N8m922C
   bucket: lzqwxr
+
+spring:
+  #mybatis配置
+  datasource:
+    username: root
+    password: ENC(zRASffFgNlRby/HcIEUo7OPo6PROvVBX)
+    url: jdbc:mysql://49.235.126.19:3306/onlineide?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    #durid配置
+    type: com.alibaba.druid.pool.DruidDataSource
+    initialSize: 5
+    minIdle: 5
+    maxActive: 20
+    maxWait: 60000
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: SELECT 1 FROM DUAL
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
