--- a/springboot-dubbo-web/src/main/resources/application-prod.yml
+++ b/springboot-dubbo-web/src/main/resources/application-prod.yml
@@ -18,3 +18,9 @@ spring:
   #静态资源访问
   resources:
       static-locations: file:${resources.route}
+  #mybatis配置
+  datasource:
+    username: root
+    password: ENC(zRASffFgNlRby/HcIEUo7OPo6PROvVBX)
+    url: jdbc:mysql://49.235.126.19:3307/onlineide?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+    driver-class-name: com.mysql.cj.jdbc.Driver
