--- a/springboot-dubbo-web/pom.xml
+++ b/springboot-dubbo-web/pom.xml
@@ -38,22 +38,18 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo</artifactId>
-            <version>2.7.3</version>
-        </dependency>
+
 
         <!--zookeeper curator-->
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
-            <version>4.0.1</version>
+            <version>2.12.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
-            <version>4.0.1</version>
+            <version>2.12.0</version>
         </dependency>
         <!--zookeeper -->
         <dependency>
@@ -68,6 +64,19 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- zookeeper客户端 -->
+        <!--<dependency>-->
+        <!--    <groupId>com.101tec</groupId>-->
+        <!--    <artifactId>zkclient</artifactId>-->
+        <!--    <version>0.7</version>-->
+        <!--    <exclusions>-->
+        <!--        <exclusion>-->
+        <!--            <groupId>org.slf4j</groupId>-->
+        <!--            <artifactId>slf4j-log4j12</artifactId>-->
+        <!--        </exclusion>-->
+        <!--    </exclusions>-->
+        <!--</dependency>-->
         <!-- jwt-->
         <dependency>
             <groupId>com.auth0</groupId>
@@ -84,13 +93,13 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.9.1</version>
+            <version>3.141.59</version>
         </dependency>
         <!--版本冲突时必须和seleniumhq同时导入-->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>23.6-jre</version>
+            <version>25.0-jre</version>
         </dependency>
         <dependency>
             <groupId>com.lzq</groupId>
@@ -159,11 +168,11 @@
             <version>3.0.2</version>
         </dependency>
         <!--druid连接池-->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.2.4</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>com.alibaba</groupId>-->
+        <!--    <artifactId>druid-spring-boot-starter</artifactId>-->
+        <!--    <version>1.2.4</version>-->
+        <!--</dependency>-->
         <!--lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
