--- a/springboot-dubbo-web/src/main/resources/application-dev.yml
+++ b/springboot-dubbo-web/src/main/resources/application-dev.yml
@@ -18,6 +18,6 @@ spring:
   #mybatis配置
   datasource:
     username: root
-    password: ENC(zRASffFgNlRby/HcIEUo7OPo6PROvVBX)
-    url: jdbc:mysql://49.235.126.19:3306/onlineide?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+    password: ENC(WXWaBiEdhad+aqD/luB+Kw==)
+    url: jdbc:mysql:///onlineidea?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
     driver-class-name: com.mysql.cj.jdbc.Driver
