--- a/springboot-dubbo-web/src/main/resources/application-prod.yml
+++ b/springboot-dubbo-web/src/main/resources/application-prod.yml
@@ -1,37 +1,11 @@
-#resources:
-#  route: /home/demo/data/
-#  InitHtml: /home/demo/data/HelloWord.html
-#
-#qiniuyun:
-#  accessKey: Z_7eMJdtj_n4lrAdSs3zVuZ8rn4wZXu75b1gYJbC
-#  secretKey: QIriVPlgNKoKdjU02q166-7IBPy3z9sQTMn5Ae7R
-#  bucket: js-encoder
-##qiniuyun:
-##  accessKey: fIf9nYz-wQo3HD1AlhQ5wrUrdjtygUPGe2dpuLlY
-##  secretKey: ItVUX8sAaxsuj7kgmk3IZ0ip3BHljAx61N8m922C
-##  bucket: lzqwxr
-#
-#chorme:
-#  value: /usr/bin/chromedriver
-#
-#spring:
-#  #静态资源访问
-#  resources:
-#      static-locations: file:${resources.route}
-#  #mybatis配置
-#  datasource:
-#    username: root
-#    password: ENC(zRASffFgNlRby/HcIEUo7OPo6PROvVBX)
-#    url: jdbc:mysql://49.235.126.19:3307/onlineide?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
-#    driver-class-name: com.mysql.cj.jdbc.Driver
 
 resources:
   route: C:/Java/data/
 
 qiniuyun:
-  accessKey: Z_7eMJdtj_n4lrAdSs3zVuZ8rn4wZXu75b1gYJbC
-  secretKey: QIriVPlgNKoKdjU02q166-7IBPy3z9sQTMn5Ae7R
-  bucket: js-encoder
+  accessKey:
+  secretKey:
+  bucket:
 
 chorme:
   value: C:/Java/Google/chromedriver.exe
@@ -45,5 +19,5 @@ spring:
   datasource:
     username: root
     password: ENC(zRASffFgNlRby/HcIEUo7OPo6PROvVBX)
-    url: jdbc:mysql://49.235.126.19:3307/onlineide?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+    url: jdbc:mysql:///onlineide?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
     driver-class-name: com.mysql.cj.jdbc.Driver
