--- a/springboot-dubbo-web/src/main/resources/application-test.yml
+++ b/springboot-dubbo-web/src/main/resources/application-test.yml
@@ -2,9 +2,9 @@ resources:
   route: /home/demo/data/
 
 qiniuyun:
-  accessKey: Z_7eMJdtj_n4lrAdSs3zVuZ8rn4wZXu75b1gYJbC
-  secretKey: QIriVPlgNKoKdjU02q166-7IBPy3z9sQTMn5Ae7R
-  bucket: js-encoder
+  accessKey:
+  secretKey:
+  bucket:
 
 chorme:
   value: /usr/bin/chromedriver
