--- a/springboot-dubbo-web/src/main/resources/application.yml
+++ b/springboot-dubbo-web/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: web
   #rdis配置
   redis:
-    host: 49.235.126.19
+    host: 127.0.0.1
     port: 6379
     jedis:
       pool:
@@ -14,10 +14,10 @@ spring:
         max-wait: -1
         max-idle: 500
         min-idle: 0
-    password: wxr19980304
+    password:
   #rabbitmq配置
   rabbitmq:
-    host: 49.235.126.19
+    host: 127.0.0.1
     port: 5672
     username: user
     password: wxr19980304
@@ -27,11 +27,11 @@ dubbo:
     name: dubbo_web
   registry:
     protocol: zookeeper
-    address: zookeeper://49.235.126.19:2181
-    timeout: 600000
+    address: zookeeper://127.0.0.1:2181
+    timeout: 10000
   consumer:
     retries: 0
-    timeout: 600000
+    timeout: 10000
 
 #数据加密
 jasypt:
@@ -47,6 +47,9 @@ server:
   port: 8090
   tomcat:
     max-http-form-post-size: -1
+  servlet:
+    session:
+      setMaxInactiveInterval: 60*60
 
 logging:
   config: classpath:logback.xml
